cli/tests/snapshots/cli__run_images@dash3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/dash3.py
---
<svg width="100" height="0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 0 0 L 100 0" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2" stroke-dasharray="6, 3, 2, 3" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
</svg>
