cli/tests/snapshots/cli__run_images@ellipse2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/ellipse2.py
---
<svg width="30" height="60" xmlns="http://www.w3.org/2000/svg">
  <path d="M 30 30 A 15 30 0 0 1 0 30 A 15 30 0 0 1 30 30 Z" fill="rgba(0, 0, 255, 1.0)" />
</svg>
