cli/tests/snapshots/cli__run_images@empty_scene1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/empty_scene1.py
---
<svg width="160" height="90" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="160" height="90" transform="rotate(0 80 45)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <path d="M 0 0 L 160 0 L 160 90 L 0 90 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
  </g>
</svg>
