cli/tests/snapshots/cli__run_images@flip_horizontal1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/flip_horizontal1.py
---
<svg width="137" height="69" xmlns="http://www.w3.org/2000/svg">
  <g>
    <path d="M 0 25 L 43.30127 0 L 68.30127 43.30127 L 25 68.30127 Z" fill="rgba(255, 0, 0, 1.0)" />
    <path d="M 136.60254 25 L 93.30127 0 L 68.30127 43.30127 L 111.60254 68.30127 Z" fill="rgba(0, 0, 255, 1.0)" />
  </g>
</svg>
