cli/tests/snapshots/cli__run_images@frame2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/frame2.py
---
<svg width="80" height="70" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <path d="M 20 35 A 10 35 0 0 1 0 35 A 10 35 0 0 1 20 35 Z" fill="rgba(176, 196, 222, 1.0)" />
        <defs><clipPath id="clip0" ><rect x="20" y="10" width="20" height="50" transform="rotate(0 30 35)" /></clipPath></defs>
        <g clip-path="url(#clip0)" >
          <g>
            <path d="M 40 35 A 10 25 0 0 1 20 35 A 10 25 0 0 1 40 35 Z" fill="rgba(123, 104, 238, 1.0)" />
            <path d="M 20 10 L 40 10 L 40 60 L 20 60 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-width="2" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
          </g>
        </g>
      </g>
      <path d="M 60 35 A 10 15 0 0 1 40 35 A 10 15 0 0 1 60 35 Z" fill="rgba(106, 90, 205, 1.0)" />
    </g>
    <path d="M 80 35 A 10 5 0 0 1 60 35 A 10 5 0 0 1 80 35 Z" fill="rgba(0, 0, 128, 1.0)" />
  </g>
</svg>
