cli/tests/snapshots/cli__run_images@isosceles_triangle3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/isosceles_triangle3.py
---
<svg width="32.0" height="58.0" xmlns="http://www.w3.org/2000/svg">
  <path d="M 31.05828541230252 0.0 L 15.52914270615126 57.955549577344094 L 0.0 0.0 Z" fill="rgba(32, 178, 170, 1.0)" />
</svg>
